# cmaketestbed

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindReadline.cmake
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  main.c
src/libcalc/: CMakeLists.txt  calc.c  calc.h
